<resources>
    <string name="app_name">Seoul Mate</string>
    <string name="hello_world">Seoul MAPpedia</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_seoul_map_pedia">SeoulMapPedia</string>
    <string name="campus_maps">Campus Maps</string>
    <string name="google_maps">Google Maps</string>
    <string name="airport_bus">Airport Bus</string>
    <string name="special_food">Special dietaries</string>
    <string name="campus_campus">Campus to Campus</string>
    <string name="sgc_programs">Halal Food Guide</string>
    <string name="general_info">Seoul Life</string>
    <string name="sgc_connect">Seoul Global Center</string>
    <string name="about_content"> This app is made by Group D members of SISF 2011. SISF is part of Seoul Global Center under
         Seoul Metropoliton Government!</string>
    <string name="about_us">about us</string>
    <string name="share">share</string>
    <string name="help">Help ?</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="minVersion">minVersion</string>
    <string name="isLaunchableActivity">isLaunchableActivity</string>
    <string name="loggingTag">YoutubeAPIDemos</string>
    <string name="uisettings_demo">UI Settings</string>
    <string name="uisettings_description">Demonstrates how to alter user interface settings.</string>
    <string name="up_arrow">\u2191</string>
    <string name="width">Width</string>
    <string name="zoom_buttons">Zoom Buttons</string>
    <string name="zoom_gestures">Zoom Gestures</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="alpha">Alpha</string>
    <string name="animate">Animate</string>
    <string name="basic_map">Basic Map</string>
    <string name="basic_description">Launches a map</string>
    <string name="camera_demo">Camera</string>
    <string name="camera_description">Demonstrates camera functions.</string>
    <string name="circle_demo">Circles</string>
    <string name="circle_description">Demonstrates how to add Circles to a map.</string>
    <string name="clear_map">Clear</string>
    <string name="compass">Compass</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">Google Maps API Demos</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="duration">Custom Duration</string>
    <string name="hue">Hue</string>
    <string name="events_demo">Events</string>
    <string name="events_description">Demonstrates event handling.</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="go_to_bondi">Go to Bondi</string>
    <string name="go_to_sydney">Go to Sydney</string>
    <string name="groundoverlay_demo">Ground Overlays</string>
    <string name="groundoverlay_description">Demonstrates how to add a GroundOverlay to a map.</string>
    <string name="hybrid">Hybrid</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>
        <item>@string/satellite</item>
        <item>@string/terrain</item>
    </string-array>
    <string name="layers_demo">Layers</string>
    <string name="layers_description">Demonstrates the different map layers.</string>
    <string name="left_arrow">\u2190</string>
    <string name="legal_info">Legal Info</string>
    <string name="locationsource_demo">Location Source Demo</string>
    <string name="locationsource_description">Demonstrates how to use a custom location source.</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="marker_demo">Markers</string>
    <string name="marker_description">Demonstrates how to add Markers to a map.</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="multi_map_demo">Multiple Maps</string>
    <string name="multi_map_description">Demonstrates how to show multiple maps in a single activity.</string>
    <string name="my_location">My Location</string>
    <string name="my_location_demo">My Location Demo</string>
    <string name="my_location_description">Demonstrates how to use GMS Location</string>
    <string name="mylocation_button">My Location Button</string>
    <string name="mylocation_layer">My Location Layer</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="options_demo">Options</string>
    <string name="options_description">Demonstrates how to use Options to initialize a map.</string>
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
    <string name="polygon_demo">Polygons</string>
    <string name="polygon_description">Demonstrates how to add Polygons to a map.</string>
    <string name="polyline_demo">Polylines</string>
    <string name="polyline_description">Demonstrates how to add Polylines to a map.</string>
    <string name="programmatic_demo">Programmatically add map</string>
    <string name="programmatic_description">Demonstrates how to add a MapFragment programmatically.</string>
    <string name="properties_circle">Properties for Circle(s)</string>
    <string name="properties_sydney_polyline">Properties for Sydney Polyline</string>
    <string name="properties_sydney_polygon">Properties for Sydney Polygon</string>
    <string name="rotate">Rotate Gestures</string>
    <string name="raw_mapview_demo">Raw MapView</string>
    <string name="raw_mapview_description">Demonstrates how to use a raw MapView.</string>
    <string name="reset_map">Reset</string>
    <string name="retain_map">Retain map</string>
    <string name="retain_map_description">Demonstrates how to reuse a MapFragment.</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="save_state_demo">Save the state of a MapFragment.</string>
    <string name="save_state_description">Demonstrates how to save the state of a MapFragment upon rotation of the device.</string>
    <string name="save_state_instructions">Drag the marker, tap on it to change its color and rotate the device to check that the state of the map is preserved.</string>
    <string name="scroll">Scroll Gestures</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="terrain">Terrain</string>
    <string name="tile_overlay_demo">Tile Overlays</string>
    <string name="tile_overlay_description">Demonstrates how to add a tile overlay to a map.</string>
    <string name="tilt">Tilt Gestures</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="app_id">222622874583781</string>
    <string name="general_tips">General Tips</string>
    <string name="halal_snacks">Halal Snacks</string>
    <string name="haram_snacks">Haram Snacks</string>
    <string name="restaurants">Restaurants</string>
    <string name="korean_food">Korean Food</string>
    <string name="acknowledgement">Ackowledgement</string>
    <string name="app_back">Seoul\'sMAPpedia</string>
    <string name="seoul_life">Seoul Life</string>
    <string name="real_estate">Real-Estate Locations</string>
    <string name="student_organizations">Student Organizations</string>
    <string name="blogs">Foreigner\'s Blogs</string>
    <string name="tourism_supporters">Korean Tourism Supporters</string>
    <string name="Media">Media(TV,Radio)</string>
    <string name="app_expiry">This beta version 1.0  of App will Expire on September 28, 2013</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="halal_food">Muslim(Halal Food)</string>
    <string name="sgc_locations">Seoul Global Center Locations</string>
    <string name="estate_locations">Real-Estate Locations</string>
    <string name="student_organization">Student Organizations</string>
    <string name="expats_blogs">Expats Blogs </string>
    <string name="korean_supporters">Korean Tourism Supporters</string>
    <string name="korean_media">Media</string>
    <string name="news_events">News and Events</string>
    <string name="show_setting">Show Settings</string>
    <string name="hide_settings">Hide Settings</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="market_version">App Version : 1.3</string>
    <string name="app_description">Seoul MAPpedia is an android app that conveniently provides international students and faculty relevant 
          information about life in Seoul and their respective university communities. If you just arrived in Seoul, or planning to attend 
          university at Seoul, this is right App for you with plenty of useful and up-to-date information.</string>
    <string-array name="lang_array">
        <item>English-US</item>
        <item>Korean</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Vietnamese</item>
        <item>Filipino</item>
    </string-array>
    <string name="language_choose">Choose Language</string>
    <string name="language">Language</string>
    <string name="accommodation">Accommodation </string>
    <string name="career">Career Opportunities</string>
    <string name="events_students">Events for Students</string>
    <string name="korean_lessons">Korean Language Resources</string>
    <string name="korean_wave">Korean Wave</string>
    <string name="subway_map">Subway Map</string>
    <string name="seoul_mappedia">Seoul MapPedia</string>
    <string name="campus">Campus</string>
    <string name="scholarships">Scholar-ships</string>
    <string name="dining">Dining</string>
    <string name="social">Social Media</string>
    <string name="korea_tour">Korea Tour</string>
    <string name="volunteering_seoul">Volunteer Work</string>
    <string name="asian_games">Asian Games 2014</string>
    <string name="online_courses">Online Courses</string>
    <string name="jobs">Jobs</string>
    <string name="groove_korea">Groove Korea</string>
    <string name="gangnam_tour">Gangnam Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="seoul_mate">Seoul Mate</string>
    <string name="naver_dic">Naver Dictionary</string>
    <string name="title_activity_social_media_menu">SocialMediaMenu</string>
    <string name="action_settings">Settings</string>
    <string name="login_intro">Welcome to Seoul Mate</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="location">Location</string>
    <string name="student_life">Student Life</string>
    <string name="worldcup_text">My WorldCup Team</string>
    <string name="sm_website">Seoul Mate Website</string>
    <string name="worldcup_schedule">Schedule</string>
    <string name="instagram_wc">Worldcup Photos</string>
</resources>