<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Google Inc. All Rights Reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:padding="5dp"
      android:textAppearance="@android:style/TextAppearance.Small"
      android:gravity="top"
      android:text="@string/app_description"/>
  
      <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:padding="5dp"
      android:textColor="@color/orange"
      android:textAppearance="@android:style/TextAppearance.Large"
      android:text="@string/market_version"/>
  
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:padding="5dp"
      android:visibility="invisible"
      android:textAppearance="@android:style/TextAppearance.Small"
      android:text="@string/app_expiry"/>
    
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:padding="5dp"
      android:layout_marginBottom="10dp"
      android:layout_gravity="center"
      android:textStyle="bold"
      android:textAppearance="@android:style/TextAppearance.Small"
      android:text="Introduction Video!!"/>

  <com.google.android.youtube.player.YouTubePlayerView
      android:id="@+id/youtube_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

</LinearLayout>
